# AWS_MCP_Server

./: .gitignore  README.md  README_AWS_MCP_SERVER.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-cd.yml
tests/: test_main.py
